fix(styles): potential fix background not expanding on iOS rotate

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -106,8 +106,8 @@ ul {
 #background::before {
   content: " ";
   position: fixed;
-  min-width: 100%;
-  min-height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
   top: 0;
   left: 0;
   background: radial-gradient(ellipse at 140% 90%, #09000f, transparent 50%),
